# tree-sitter-powershell

./: CMakeLists.txt  Cargo.toml  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
