[package]
name = "tree-sitter-powershell"
description = ""
version = "1.2.0"
authors = ["William Woodruff <william@yossarian.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "powershell"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/woodruffw-forks/tree-sitter-powershell"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
